refactoring crud routes create